data/derived/comb/progs/unify/prog4614.ml.out
Characters 47-53:
  | VarX -> buildX * 1.0
            ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type int
